# aiodynamo

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .readthedocs.yml  LICENSE  circle.yml  mypy.ini  pyproject.toml  pytest.ini  readme.md  setup.py  test-requirements.txt
.circleci/: config.yml
.circleci/dockerfiles/dynamodb-local/: Dockerfile
.github/docker-compose/: docker-compose.dynalite.yml  docker-compose.dynamodb-local.yml  docker-compose.localstack.yml  docker-compose.scylla.yml
.github/workflows/: deploy.yml  release.yml  workflow.yml
benchmarks/deserialize/: README.md  bench_aiodynamo.py  bench_boto3.py  bench_ddbcereal.py  utils.py
benchmarks/query/: README.md  bench_aiobotocore.py  bench_aiodynamo_aiohttp.py  bench_aiodynamo_httpx.py  bench_aiodynamo_mock.py  bench_boto3.py  bench_botocore.py  fill_db.py  utils.py
benchmarks/signing/: README.md  bench_aiodynamo.py  bench_botocore.py  data.py
docker-compose/localstack/: docker-compose.yml
docs/: advanced.rst  changelog.rst  concepts.rst  conf.py  development.rst  index.rst  installation.rst  quickstart.py  quickstart.rst  usage.rst
src/aiodynamo/: __init__.py  _compat.py  _mypy_hacks.py  client.py  connection.py  constants.py  converters.py  credentials.py  errors.py  exceptions.py  expressions.py  health.py  helpers.py  models.py  operations.py  serde.py  sign.py  test_aiodynamo.py  types.py  utils.py
src/aiodynamo/fast/: client.py  credentials.py  errors.py  sign.py
src/aiodynamo/fast/http/: aiohttp.py  base.py  httpx.py
src/aiodynamo/http/: aiohttp.py  base.py  httpx.py  mock.py  types.py
src/aiodynamo/otel/: metrics.py  types.py
tests/: conftest.py  fakes.py  requirements.txt  test_functions.py  test_with_db.py  tests.py
tests/integration/: conftest.py  test_client.py
tests/unit/: process_credentials.py  test_client.py  test_credentials.py  test_errors.py  test_expressions.py  test_health_monitor.py  test_http_clients.py  test_metrics.py  test_models.py  test_otel.py  test_utils.py
