[project]
name = "aiodynamo"
version = "24.7"
description = "Asyncio DynamoDB client"
authors = [{ name = "Jonas Obrist", email = "jonas.obrist@hennge.com" }]
requires-python = ">=3.10"
dependencies = [
    "yarl>=1.4.2",
]

[project.optional-dependencies]
httpx = [
    "httpx>=0.15.0,<1.0.0",
]
aiohttp = [
    "aiohttp>=3.6.2",
]
opentelemetry = [
    "opentelemetry-api>=1.40.0",
    "opentelemetry-sdk>=1.40.0",
]

[dependency-groups]
dev = [
    "aiohttp>=3.6.2",
    "black>=22.3",
    "boto3>=1.12.18",
    "freezegun>=1.0",
    "furo>=2023.9.10",
    "httpx>=0.15.0,<1.0.0",
    "isort>=5.8.0",
    "mypy>=1.5.1",
    "pyfakefs>=5.3.0",
    "pyperf>=2.0",
    "pytest>=7.0",
    "pytest-asyncio>=0.17",
    "pytest-cov>=2.6",
    "pytest-xdist>=3.6.1",
    "ruff>=0.0.292",
    "sphinx>=7",
    "types-freezegun>=1.1.6",
    "urllib3<1.27",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = "tests"

[tool.mypy]
strict = true
files = [
    "src/",
    "tests/",
]

[tool.ruff.lint]
ignore = [
    "E722", # Do not use bare `except`
    "E501", # Line too long (104 > 88 characters)
]
select = [
    "E", "F", "T201", "I"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
